[tool.poetry]
name = "codespace-algorand"
version = "0.1.0"
description = ""
authors = ["Ahmad Faraz <129995311+AhmadFarazWeb3Developer@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
